tests/neg/i2492b.scala
class Map[K]
object Foo {
 type X = Map { type Map$$K = String } // error
}
